[STR-2184] updated docs
