# api/rest/swagger.json
@@ -134,6 +134,45 @@
                 }
             }
         },
+        "/dump": {
+            "get": {
+                "produces": [
+                    "text/csv"
+                ],
+                "tags": [
+                    "geo IP"
+                ],
+                "summary": "geoip database dump",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "format",
+                        "name": "format",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/env": {
             "get": {
                 "security": [
@@ -283,6 +322,45 @@
                             "items": {
                                 "$ref": "#/definitions/entity.GeoNameCountry"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/geoname/dump": {
+            "get": {
+                "produces": [
+                    "text/csv"
+                ],
+                "tags": [
+                    "geonames"
+                ],
+                "summary": "geonames csv dump",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "format",
+                        "name": "format",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "400": {
